--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "graphql-schema-typescript",
-  "version": "1.5.2",
+  "name": "@peergrade/graphql-schema-typescript",
+  "version": "1.5.2-next.0",
   "description": "Generate TypeScript from GraphQL's schema type definitions",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
