--- a/package.json
+++ b/package.json
@@ -29,13 +29,13 @@
     "del-cli": "^2.0.0",
     "fs-extra": "4.0.2",
     "graphql": "^15.5.0",
-    "graphql-tools": "8.0.0",
     "jest": "^26.0.0",
     "ts-jest": "^26.0.0",
     "tslint": "5.8.0",
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@graphql-tools/schema": "^8.0.1",
     "camelcase": "^6.2.0",
     "yargs": "^16.0.0"
   },
